--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "gist/walgreens",
     "description": "Integration for the walgreens photoprint API",
-    "type": "composer-plugin",
+    "type": "library",
     "require": {
         "php": ">=5.5.0",
         "guzzlehttp/guzzle": "^6.5"
